# HarmUL

./: .gitignore  main.py  pyproject.toml
configs/accelerate/: default_config_2gpu_zero3_offloadopt.yaml  zero_stage3_offload_optimizer_cpu_config.json
configs/data/datasets/: JSON_QA_eval_forget.yaml  JSON_QA_eval_retain.yaml  JSON_QA_forget.yaml  JSON_QA_forget_alt.yaml  JSON_QA_retain.yaml
configs/eval/: json_unlearn.yaml
configs/eval/json_unlearn_metrics/: forget_Q_A_Prob.yaml  forget_Q_A_ROUGE.yaml  retain_Q_A_Prob.yaml  retain_Q_A_ROUGE.yaml
configs/experiment/eval/json_unlearn/: default.yaml  llama2_7b_chat_harmbench.yaml  llama3_1_8b_instruct_jailbreak_log.yaml
configs/hydra/: default.yaml
data/: preprocess.py
scripts/: json_unlearn.sh  json_unlearn_llama2_7b_chat.sh  json_unlearn_llama3_1_8b_instruct.sh
src/: unlearn.py
src/evals/: __init__.py  json_unlearn.py
src/model/: __init__.py
src/trainer/: __init__.py
src/trainer/unlearn/: ceu.py  dpo.py  grad_ascent.py  grad_diff.py  npo.py  pdu.py  rmu.py  satimp.py  simnpo.py  undial.py  wga.py
