[project]
name = "harmul"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "accelerate>=1.12.0",
    "datasets>=4.6.0",
    "deepspeed>=0.18.6",
    "hydra-core>=1.3.2",
    "lm-eval==0.4.8",
    "omegaconf>=2.3.0",
    "rouge-score>=0.1.2",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "setuptools>=82.0.0",
    "transformers>=4.45.1,<5",
    "wandb>=0.25.0",
]